<resources>
    <string name="app_name">ShopOnline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="last_viewed">Last Viewed</string>
    <string name="product_list">Product List</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="more_details">More details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="transition_product_image">Product image transition</string>
</resources>
