<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp">

        <ImageView
            android:id="@+id/IV_banner"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_image_loading" />

        <android.support.v4.view.ViewPager
            android:id="@+id/VPager_product_image"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/TV_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/IV_banner"
            android:layout_marginTop="@dimen/_20sdp"
            android:singleLine="true"
            android:text="Samsung LED TV"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/TV_item_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_item_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:text="Special price :"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/TV_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_item_price_label"
            android:layout_marginTop="@dimen/_8sdp"
            android:singleLine="true"
            android:text="RS 40000"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/TV_product_highlights_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_item_price"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:text="Product Highlights :"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/TV_product_highlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_product_highlights_label"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/TV_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_product_highlights"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:text="@string/more_details"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/black_border_trans_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/TV_buy_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:text="@string/buy_now"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</RelativeLayout>